# siplasplas

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  .ycm_extra_conf.py.in  CMakeLists.txt  LICENSE  README.md  README.spanish.md  _config.yml  appveyor.yml  bootstrap.cmake  check-issue-number.py  foo.txt  index.html  index.md  params.json  pre-push  visitors_test.hpp  ç
doc/: CMakeLists.txt  Doxyfile.in  index.md  process_docs.cmake  process_standardese_output.cmake
doc/doxygen/: index.md
doc/fix-windows-support/: annotations_8hpp_source.html  assert_8hpp_source.html  asyncsink_8hpp_source.html  attribute_8hpp_source.html  classcpp_1_1_async_sink-members.html  classcpp_1_1_async_sink.html  classcpp_1_1_file_system_listener-members.html  classcpp_1_1_signal_emitter.html  classcpp_1_1_signal_emitter.js  classcpp_1_1_signal_sink.html  classcpp_1_1_sync_sink-members.html  classcpp_1_1_sync_sink.html  cmake_2logger_8hpp_source.html  dir_644b9345748dafb9b5113bbefed19f47.html  dir_68f68d6a477513b627730c3967877ed6.html  dir_aedc732cf37bd57919198530e01b78e3.html  dir_e679a21d70bc492d8a91096cb8c2ac5f.html  dir_edefd114767c19d44c4c598a0d55534c.html  dir_ee60455701a0282e863a7734c44718c2.html  dir_fe3c8566c0d06e9135e1a73570417829.html  dynamic_2class_8hpp_source.html  dynamic_2field_8hpp_source.html  dynamic_2sourceinfo_8hpp_source.html  dynamiclibrary_8hpp_source.html  embedded__allocator_8hpp_source.html  emitter_8hpp_source.html  entity_8hpp_source.html  enum_8hpp_source.html  examples.html  examples.js  fslistener_8hpp_source.html  function__pointer_8hpp_source.html  function__traits_8hpp_source.html  functions.html  fusion_8hpp_source.html  hash_8hpp_source.html  json_8hpp_source.html  lexical__cast_8hpp_source.html  logger_2logger_8hpp_source.html  meta_8hpp_source.html  (+22 more)
doc/html/: annotated_dup.js  assert_8hpp_source.html  classcpp_1_1_async_sink-members.html  classcpp_1_1_async_sink.js  classcpp_1_1_file_system_listener.html  classcpp_1_1_file_system_listener.js  classcpp_1_1_signal_emitter-members.html  dir_14941fc8b15e92e8a67ae737e84cf953.html  dir_21d87ecc3dab0d14fdef08e422b0467c.html  dir_56816654746c728bfe72244b83c7cfbe.html  dynamic_2class_8hpp_source.html  dynamic_2sourceinfo_8hpp_source.html  entity_8hpp_source.html  enum_8hpp_source.html  freelist__allocator_8hpp_source.html  fslistener_8hpp_source.html  fswatch_2fswatch_8cpp-example.html  functions_func.html  fusion_8hpp_source.html  group__fswatch.html  group__signals.html  group__signals.js  hash_8hpp_source.html  hierarchy.js  linear__allocator_8hpp_source.html  logger_2logger_8hpp_source.html  modules.js  navtreedata.js  preprocessor_8hpp_source.html  reflection_2dynamic_2logger_8hpp_source.html  reflection_2static_2function_8hpp_source.html  signals_2signals_8cpp-example.html  sink_8hpp_source.html  static_2sourceinfo_8hpp_source.html  string_8hpp_source.html  target_8hpp_source.html  tuple_8hpp_source.html
doc/master/: annotated.html  annotated_dup.js  annotations_8hpp_source.html  api_8hpp_source.html  assert_8hpp_source.html  asyncsink_8hpp_source.html  attribute_8hpp_source.html  canary__allocator_8hpp_source.html  classcpp_1_1_assert_expression.html  classcpp_1_1_async_sink-members.html  classcpp_1_1_async_sink.html  classcpp_1_1_async_sink.js  classcpp_1_1_c_make_project.html  classcpp_1_1_c_make_target.html  classcpp_1_1_exception.html  classcpp_1_1_raw_hash.js  classcpp_1_1_signal_emitter.html  classcpp_1_1_signal_sink-members.html  classcpp_1_1_signal_sink.html  classcpp_1_1_signal_sink.js  classcpp_1_1_sync_sink-members.html  classcpp_1_1_sync_sink.html  classcpp_1_1_sync_sink.js  classes.html  clonable_8hpp_source.html  cloning__ptr_8hpp_source.html  cmake_2cmake-project_8cpp-example.html  cmake_2logger_8hpp_source.html  contract_8hpp_source.html  dir_0a71fed7e56f5b503bb188e95efa2275.html  dir_14941fc8b15e92e8a67ae737e84cf953.html  dir_21d87ecc3dab0d14fdef08e422b0467c.html  dir_2886542bb515e1abaacc9eb03b81147b.html  dir_56816654746c728bfe72244b83c7cfbe.html  dir_644b9345748dafb9b5113bbefed19f47.html  dir_68f68d6a477513b627730c3967877ed6.html  dir_870c39e08ec8d4618f4c091b27ac4c30.html  dir_8c14d311ff9710a54cda089d8ba72c22.html  dir_aedc732cf37bd57919198530e01b78e3.html  dir_b536e9ea0bc53b11715c87c87fe98792.html  (+85 more)
doc/standardese/: index.md
examples/: CMakeLists.txt  canary_allocator.cpp  chaiscript.cpp  coroutine2.cpp  dynamiclibrary.cpp  free_list.cpp  freelist_allocator.cpp  fusion.cpp  gamelike_variant.cpp  lifo_allocator.cpp  linear_allocator.cpp  messaging.cpp  messaging.hpp  meta.cpp  metatype.cpp  multi_visitor.cpp  myclass.hpp  pipeline.cpp  plugin.cpp  reflection.cpp  variant.cpp
examples/allocator/: CMakeLists.txt  canary_allocator.cpp  lifo_allocator.cpp
examples/backward-cpp/: CMakeLists.txt  backward-cpp.cpp
examples/boost/: CMakeLists.txt  coroutine.cpp
examples/cmake/: CMakeLists.txt  cmake-project.cpp
examples/efsw/: CMakeLists.txt  efsw.cpp  updatelistener.hpp
examples/fswatch/: CMakeLists.txt  fswatch.cpp
examples/imgui-sfml/: CMakeLists.txt  imgui-sfml.cpp
examples/jobs/: CMakeLists.txt  jobs.cpp
examples/libexecstream/: CMakeLists.txt
examples/messaging/: messaging.hpp
examples/metatype/: CMakeLists.txt
examples/plugin/: CMakeLists.txt  plugin.hpp  reflectionruntimeloader.cpp  reflectionruntimeloader.hpp
examples/plugininterface/: CMakeLists.txt  plugininterface.hpp
examples/reflection/: CMakeLists.txt  astexamples.hpp  chaiscript.cpp  myclass.hpp  myenum.hpp  plugin.cpp  reflection.cpp
examples/signals/: CMakeLists.txt  foobar.hpp  signals.cpp
examples/typeerasure/: CMakeLists.txt  any.cpp  classes.hpp
examples/utility/: CMakeLists.txt  fusion.cpp
examples/variant/: CMakeLists.txt  gamelike_variant.cpp  multi_visitor.cpp
src/: CMakeLists.txt
src/allocator/: CMakeLists.txt  allocator_utils.cpp  embedded_allocator.cpp  freelist_allocator.cpp  lifo_allocator.cpp  linear_allocator.cpp
src/cmake/: CMakeLists.txt  logger.cpp  project.cpp  target.cpp
src/constexpr/: CMakeLists.txt
src/fswatch/: CMakeLists.txt  (+1 more)
test/: CMakeLists.txt
(+2296 files in other folders)
